--- a/about.html
+++ b/about.html
@@ -41,6 +41,17 @@
 	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- resp -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5605867882472698"
+     data-ad-slot="5509575653"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </head>
 <body>
 	<!-- Preloader Start -->
@@ -457,6 +468,17 @@
 				</div>
 			</div>
 		</div>
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- resp -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5605867882472698"
+     data-ad-slot="5509575653"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 		<!-- Footer Top End -->
 		<!-- Footer Bottom Start -->
 		<div class="footer-bottom-sec">
