--- a/blog-3-column.html
+++ b/blog-3-column.html
@@ -41,6 +41,17 @@
 	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- resp -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5605867882472698"
+     data-ad-slot="5509575653"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </head>
 <body>
 	<!-- Preloader Start -->
@@ -116,7 +127,18 @@
 			</div>
 		</div>
 	</div>
-	<!-- Page Heading Section End -->	
+	<!-- Page Heading Section End -->
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- resp -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5605867882472698"
+     data-ad-slot="5509575653"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 	<!-- Blog Section Start -->
 	<div class="blog-sec pt-100 pb-100">
 		<div class="container">		
@@ -386,7 +408,18 @@
 			</div>
 		</div>
 	</div>
-	<!-- Blog Section End -->	
+	<!-- Blog Section End -->
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- resp -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5605867882472698"
+     data-ad-slot="5509575653"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 	<!-- Footer Section Start -->
 	<footer class="footer">	
 		<!-- Footer Bottom Start -->
