--- a/blog-details18.html
+++ b/blog-details18.html
@@ -41,7 +41,17 @@
 	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
-	
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- resp -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5605867882472698"
+     data-ad-slot="5509575653"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </head>
 <body>
 	<!-- Header Start -->
@@ -111,7 +121,18 @@
 			</div>
 		</div>
 	</div>
-	<!-- Page Heading Section End -->	
+	<!-- Page Heading Section End -->
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- resp -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5605867882472698"
+     data-ad-slot="5509575653"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 	<!-- Blog Section Start -->
 	<div class="blog-sec pt-100 pb-70">
 		<div class="container">		
@@ -187,6 +208,17 @@
 								<button type="submit"><i class="fa fa-search"></i></button>								
 							</form>	
 						</div>
+						<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- resp -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5605867882472698"
+     data-ad-slot="5509575653"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 						<div class="widget-archive">
 							<h1>Subject catsgories</h1>
 							<ul>
@@ -270,6 +302,17 @@
 		</div>
 	</div>
 	<!-- Blog Section End -->	
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- resp -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5605867882472698"
+     data-ad-slot="5509575653"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 	<!-- Footer Section Start -->
 	<footer class="footer">	
 		<!-- Footer Top Start -->
