--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 							</div>
 						</div>									
 						<div class="single-post-text">						
-							<h2><a href="blog-details1.html">Additional 17,000 civil servants required at local levels</a></h2>
+							<h2><a href="blog-details.html">Additional 17,000 civil servants required at local levels</a></h2>
 							<p>The government is in need of  at least 57,000 civil servants to run the neighborhood stage management. There are 753 </p>
 							<a href="blog-details.html" class="blog-readmore">Read More</a>
 						</div>
